style.css
/* General styles */

html,
body {
    margin: 0;
    padding: 0;
    height: 100vh;
    font-size: large !important;
    font-family: monospace;
    background:
        /* top, transparent color, faked with gradient */
        /* linear-gradient(90deg, rgba(255, 178, 0, 0.75) 100%, rgba(255, 178, 0, 1) 0%), */
        linear-gradient(90deg, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.85) 100%),
        /* bottom, image */
        url(bg-2.png);
    background-position: top;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

/* Navbar styles */

nav {
    margin: 0 !important;
}

.navbar {
    height: 70px;
}

#top {
    padding: 0px !important;
    margin-bottom: 2%;
}

.nav-link {
    color: white !important;
    margin-left: 5px;
    margin-right: 5px;
}

.nav-link:hover {
    text-shadow: 0px 0px 3px white;
}

#language {
    display: flex;
    flex-direction: row;
    justify-content: right;
    margin: 0px !important;
    padding: 0px !important;
}

#flag {
    height: 20px;
    width: 20px;
    border-radius: 50%;
    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.2));
}

#flag-link {
    padding-left: 5px;
    font-size: small;
}

#flag-link:hover {
    filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.3));
}

/* Section dividers */

.custom-shape-divider-bottom-1639442598 {
    position: relative;
    bottom: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-bottom-1639442598 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 20px;
    transform: rotateY(180deg);
}

.custom-shape-divider-bottom-1639442598 .shape-fill {
    fill: #FFFFFF;
}

#triangle-bottom {
    background-color: #282d31;
    margin-top: 0px !important;
    padding-top: 0px !important;
}

.section-title {
    border-style: solid;
    border-width: 1px;
    padding: 15px;
    border-color: rgba(253, 29, 29, 0.3);
}

/* Intro section */

.redtag {
    color: #f5174ff6;
}

.greentag {
    color: #96ff33;
}

.yellowtag {
    color: #ffe448;
}

.p-stretch {
    display: flex;
    align-items: center;
    height: 100%;
    width: 100%;
    margin-bottom: 0;
    text-align: justify;
}

#intro {
    height: fit-content;
    width: 100%;
    padding: 7%;
    padding-top: 0px;
    margin: 0px !important;
    display: flex;
    align-items: center;
}

.intro-container {
    height: fit-content;
    width: 100%;
    color: white;
    text-shadow: 1px 1px 5px black;
    /* background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15) 25%, rgba(255, 255, 255, 0.15) 75%); */
    /*     border-radius: 5px;
    border-style: solid; */
    padding: 20px;
    padding-bottom: 0 !important;
    /* box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.4); */
}

.stretch-column {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.contact {
    font-size: large;
    text-align: center;
    padding-left: 5%;
    padding-right: 5%;
}

#profile-picture {
    width: 30vh;
    border-radius: 50%;
    margin-bottom: 5%;
    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
}

#contact-links {
    color: white !important;
    text-decoration: none;
}

#contact-links:hover {
    text-shadow: 0px 0px 3px white;
}

.icons {
    width: 50px;
    height: 50px;
}

h3 {
    color: white;
    background-color: rgba(253, 29, 29, 0.7) !important;
    padding: 10px;
    border-radius: 5px;
}

/* Main content */

#main-content {
    background-image:
        linear-gradient(180deg, #ffff 0%, #fdfbfb 25%, #ebedee 50%, #fdfbfb 75%, #ffff 100%),
        linear-gradient(120deg, #ffff 0%, #fdfbfb 25%, #ebedee 50%, #fdfbfb 75%, #ffff 100%);
}

/* Projects section */

#projects, #skills {
    margin: 0px !important;
    height: fit-content;
    width: 100%;
    color: rgba(253, 29, 29, 1);
    padding-left: 7%;
    padding-right: 7%;
    padding-top: 1%;
    margin-bottom: 0px;
}

#skills {
    padding-top: 5% !important;
}

.description {
    margin-top: 10px;
    margin-bottom: 10px;
}

a {
    color: rgba(253, 29, 29, 1) !important;
    font-weight: bold;
}

#last-update {
    font-size: medium;
    text-align: right;
}

.carousel-section {
    display: flex;
    justify-content: center;
    margin: 20px;
}

#carousel-libreriaEgg {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#carouselLibreriaEggIndicators {
    max-width: 1005px;
    max-height: 768px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
}

#carousel-sanjorge {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#carouselsanjorgeIndicators {
    max-width: 1005px;
    max-height: 768px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
}

iframe {
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
    border-style: solid !important;
    border-radius: 5px;

    padding: 0px !important;
}

.video-container {
    padding: 20px !important;
}

.close {
    display: flex;
    justify-content: right;
}

.btn-close {
    color: white !important;
    margin: 15px;
    margin-bottom: 0px;
}

.modal-content {
    border-radius: 10px;
    box-shadow: 1px 1px 5px black;
}

.cards-container {
    display: flex;
    justify-content: center;
    margin-top: 5px;
    margin-bottom: 5px;
}

.project-cards {
    padding: 10px;
    margin: 5px;
    border-style: solid;
    border-width: 1px;
    border-radius: 5px;
    border-color: rgba(253, 29, 29, 1);
}

/* About section */

#about {
    margin: 0px !important;
    height: fit-content;
    width: 100%;
    color: rgba(253, 29, 29, 1);
    padding-left: 7%;
    padding-right: 7%;
    padding-bottom: 1px;
    padding-top: 1%;
    margin-bottom: 0px;

}

/* Footer section */

#footer {
    background-color: #282d31;
    color: white;
    text-align: center;
    padding: 20px;
    padding-top: 0px !important;
    font-size: medium;
    /* padding-left: 3%;
    padding-right: 3%; */
}

#footer-link {
    color: white !important;
    text-decoration: none;
}

/* Media query */

/* Media Query for Mobile Devices, low resolution Tablets, Ipads */
@media (max-width: 767px) {
    body {
        background-attachment: scroll !important;
    }

    .contact {
        margin-bottom: 3%;
    }
}

/* Media Query for Laptops and Desktops and Tablets or Ipads portrait mode */
@media (min-width: 768px) and (max-width: 1280px) {
    body {
        background-attachment: fixed !important;
        background-repeat: no-repeat;
    }
}

